rm SQS.createDatasetTableInternal() add SQS.getDatasetTable() add SQS.getDatasetTableForLookup()